# ray-dispatcher

./: .gitignore  README.md  pyproject.toml
examples/toy_batch/: README.md  pyproject.toml  run_batch.py
examples/toy_batch/configs/: run_01.json  run_02.json  run_03.json  run_04.json
examples/toy_batch/experiment/: experiment.py  pyproject.toml
examples/toy_batch/tests/: test_experiment.py
src/ray_dispatcher/: __init__.py  digests.py  dispatcher.py  errors.py  locking.py  models.py  paths.py  provisioning.py  remote_runner.py  results.py  scheduling.py  ssh.py
tests/: conftest.py
tests/e2e/: conftest.py  test_concurrency.py  test_provisioning.py  test_smoke.py  test_timeout.py
tests/integration/: test_backend_exclusive_runtime.py  test_backend_running_hosts.py  test_backend_setup.py  test_backend_submit.py  test_backend_teardown.py  test_dispatcher_e2e.py  test_host_lease_actor.py
tests/unit/: test_assemble_job_result.py  test_attempt_task.py  test_backend_base.py  test_digests_env.py  test_digests_runner.py  test_digests_source.py  test_dispatcher.py  test_errors.py  test_execute_attempt.py  test_execute_attempt_cancel.py  test_execute_attempt_timeout.py  test_heartbeat_thread.py  test_lease.py  test_lease_pool_acquire.py  test_lease_pool_current_hosts.py  test_lease_pool_exclusions.py  test_lease_pool_heartbeat.py  test_lease_pool_heartbeat_late.py  test_lease_pool_quarantine.py  test_lease_pool_quarantined_hosts.py  test_lease_pool_release.py  test_lease_pool_sweep.py  test_lease_service_acquire.py  test_lease_service_current_hosts.py  test_models_hosts.py  (+40 more)
(+18 files in other folders)
