[project]
name = "ray-dispatcher"
version = "0.1.0"
description = "Generic Ray-scheduled dispatcher for subprocess jobs on SSH-accessible VMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ray>=2.40,<3",
  "fabric>=3.2,<4",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
progress = ["rich>=13,<15"]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5",
  "mypy>=1.10",
  "ruff>=0.5",
  "types-pyyaml",
]
e2e = [
  "multipass-sdk @ git+https://github.com/miciav/multipass-sdk.git@83b3704 ; python_version >= '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ray_dispatcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e: opt-in end-to-end tests using multipass-sdk (requires Multipass)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["fabric.*", "invoke.*", "paramiko.*"]
ignore_missing_imports = true
